# models/problem_catgory.go
@@ -4,9 +4,9 @@ import "gorm.io/gorm"
 
 type ProblemCategory struct {
 	gorm.Model
-	ProblemID     int            `gorm:"column:problem_id;int(11)" json:"problem_id"`
-	CategoryID    int            `gorm:"column:category_id;int(11)" json:"category_id"`
-	CategoryBasic *CategoryBasic `gorm:"foreignKey:id;references:category_id"` //关联分类的基础信息表
+	ProblemIdentity  string         `gorm:"column:problem_identity;varchar(36)" json:"problem_identity"`
+	CategoryIdentity string         `gorm:"column:category_identity;varchar(36)" json:"category_identity"`
+	CategoryBasic    *CategoryBasic `gorm:"foreignKey:identity;references:category_identity"` //关联分类的基础信息表
 }
 
 func (table *ProblemCategory) TableName() string {
