# service/user.go
@@ -86,7 +86,16 @@ func SendCode(c *gin.Context) {
 		})
 		return
 	}
-	err := utils.SendCode("123", Email)
+	code, err := models.GetCode(Email)
+	if err != nil {
+		c.JSON(200, gin.H{
+			"code": 400,
+			"msg":  err.Error(),
+			"data": nil,
+		})
+		return
+	}
+	err = utils.SendCode(code, Email)
 	if err != nil {
 		c.JSON(200, gin.H{
 			"code": 400,
@@ -99,5 +108,56 @@ func SendCode(c *gin.Context) {
 		"code": 200,
 		"msg":  "success",
 		"data": nil,
+	})
+}
+
+// Register
+// @Tags 公共方法
+// @Summary 用户注册
+// @Param name formData string true "name"
+// @Param password formData string true "password"
+// @Param phone formData string true "phone"
+// @Param mail formData string true "mail"
+// @Param code formData string true "code"
+// @Success 200 {string} json{"code":"200","msg":"","data",""}
+// @Router /Register [Post]
+func Register(c *gin.Context) {
+	name := c.PostForm("name")
+	password := c.PostForm("password")
+	phone := c.PostForm("phone")
+	mail := c.PostForm("mail")
+	userCode := c.PostForm("code")
+
+	sysCode, err := models.RDB.Get(models.CTX, mail).Result()
+	println(sysCode)
+	if err != nil {
+		c.JSON(200, gin.H{
+			"code": 400,
+			"msg":  "Get Code Error:" + err.Error(),
+			"data": nil,
+		})
+		return
+	}
+	if sysCode != userCode {
+		c.JSON(200, gin.H{
+			"code": 400,
+			"msg":  "验证码不正确",
+			"data": nil,
+		})
+		return
+	}
+	data, err := models.Register(name, password, phone, mail)
+	if err != nil {
+		c.JSON(200, gin.H{
+			"code": 400,
+			"msg":  err.Error(),
+			"data": nil,
+		})
+		return
+	}
+	c.JSON(200, gin.H{
+		"code": 200,
+		"msg":  "success",
+		"data": data,
 	})
 }
